--- a/app/src/main/res/layout/activity_calendarpage_navigationdrawer.xml
+++ b/app/src/main/res/layout/activity_calendarpage_navigationdrawer.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-    <LinearLayout
+
+<!--    <LinearLayout
         android:id="@+id/navigationviewHeaderId"
         android:layout_width="match_parent"
         android:layout_height="60dp"
@@ -38,10 +39,6 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/navigationviewHeaderId" />
-
-
-
-
+            app:layout_constraintTop_toBottomOf="@id/navigationviewHeaderId" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
