--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,40 +20,25 @@
         android:layout_marginEnd="158dp"
 
         android:layout_marginRight="158dp"
-        android:layout_marginBottom="319dp"
         android:letterSpacing="0.05"
         android:lineSpacingExtra="10sp"
         android:text="슬기롭게,\n공부하는 방법"
         android:textColor="#ffffff"
         android:textSize="35sp"
-        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/loginBtn"
-        android:layout_width="362dp"
-        android:layout_height="65dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="319dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_weight="1"
-        android:background="@drawable/botton_radius"
-        android:backgroundTint="#ffff00"
-        android:drawableLeft="@drawable/kakao_icon"
-
-        android:drawablePadding="45dip"
-        android:gravity="left|center_vertical"
-        android:letterSpacing="0.05"
-        android:padding="20dip"
-        android:text="카카오 계정으로 시작하기"
-        android:textSize="18dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+    <com.kakao.usermgmt.LoginButton
+        android:id="@+id/login_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
