--- a/app/src/main/res/layout/activity_planner_recyclerview.xml
+++ b/app/src/main/res/layout/activity_planner_recyclerview.xml
@@ -20,7 +20,8 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginTop="9dp"
-            android:layout_marginLeft="14dp"/>
+            android:layout_marginLeft="14dp"
+            tools:ignore="MissingClass" />
         <RelativeLayout
             android:layout_width="220dp"
             android:layout_height="match_parent"
